chore(ci): run lint and test also on main

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,8 @@
 name: golangci-lint
 on:
   push:
-    paths:
-      - '**.go'
     branches:
-      - master
+      - main
   pull_request:
 
 permissions:
