--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: go generate -tags tools tools/tools.go
-
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.21'
+          go-version: '1.22.6'
           cache: false
 
       - name: go get
@@ -25,7 +23,7 @@ jobs:
 
       - name: Run coverage
         run: |
-          gotestsum -- -v -race -coverprofile="coverage.out" -covermode=atomic ./...
+          go test -v -race -coverprofile="coverage.out" -covermode=atomic ./...
         env:
           VAULT_VERSION: latest
           # https://github.com/testcontainers/testcontainers-go/issues/1782
