--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,9 @@ repos:
         args: [--branch, main]
       - id: pretty-format-json
         args: [--autofix, --no-sort-keys]
+
+  - repo: https://github.com/FalcoSuessgott/mdtmpl
+    rev: v0.0.2
+    hooks:
+      - id: mdtmpl
+        args: [-t=examples/complete/complete.tmpl, -f, -o=examples/complete/README.md]
