--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,11 @@ repos:
         args: [--autofix, --no-sort-keys]
 
   - repo: https://github.com/FalcoSuessgott/mdtmpl
-    rev: v0.0.2
+    rev: v0.0.3
     hooks:
+      # example
       - id: mdtmpl
         args: [-t=examples/README.md.tmpl, -f, -o=examples/README.md]
+      # readme
+      - id: mdtmpl
+        args: [-f]
