feat(semver): add conventional commit template func

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,8 @@ repos:
       # example
       - id: mdtmpl
         args: [-t=examples/README.md.tmpl, -f, -o=examples/README.md]
+        stages: [commit-msg]
       # readme
       - id: mdtmpl
         args: [-f]
+        stages: [commit-msg]
