feat(sprout): migrate to sprout

--- a/.golang-ci.yml
+++ b/.golang-ci.yml
@@ -15,15 +15,14 @@ linters:
     - nolintlint
     - wrapcheck
     - depguard
-    - gomnd
     - err113
     - intrange
     - copyloopvar
     - gochecknoglobals
     - revive
-    - execinquery
     - godox
     - tagalign
     - tagliatelle
     - gomoddirectives
     - dupword
+    - exportloopref
