--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -73,3 +73,48 @@ brews:
       bin.install "mdtmpl"
     test: |
       system "#{bin}/mdtmpl"
+
+dockers:
+- image_templates:
+  - 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}-amd64'
+  dockerfile: Dockerfile.goreleaser
+  use: buildx
+  build_flag_templates:
+  - "--pull"
+  - "--label=io.artifacthub.package.readme-url=https://raw.githubusercontent.com/FalcoSuessgott/mdtmpl/refs/heads/main/README.md"
+  - "--label=io.artifacthub.package.maintainers=[{\"name\":\"Tom Morelly\",\"email\":\"tommorelly@gmail.com\"}]"
+  - "--label=io.artifacthub.package.license=MIT"
+  - "--label=org.opencontainers.image.description=A dead simple Markdown templating tool"
+  - "--label=org.opencontainers.image.created={{.Date}}"
+  - "--label=org.opencontainers.image.name={{.ProjectName}}"
+  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+  - "--label=org.opencontainers.image.version={{.Version}}"
+  - "--label=org.opencontainers.image.source={{.GitURL}}"
+  - "--platform=linux/amd64"
+- image_templates:
+  - 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}-arm64'
+  dockerfile:  Dockerfile.goreleaser
+  use: buildx
+  build_flag_templates:
+  - "--pull"
+  - "--label=io.artifacthub.package.readme-url=https://raw.githubusercontent.com/FalcoSuessgott/mdtmpl/refs/heads/main/README.md"
+  - "--label=io.artifacthub.package.maintainers=[{\"name\":\"Tom Morelly\",\"email\":\"tommorelly@gmail.com\"}]"
+  - "--label=io.artifacthub.package.license=MIT"
+  - "--label=org.opencontainers.image.description=A dead simple Markdown templating tool"
+  - "--label=org.opencontainers.image.created={{.Date}}"
+  - "--label=org.opencontainers.image.name={{.ProjectName}}"
+  - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+  - "--label=org.opencontainers.image.version={{.Version}}"
+  - "--label=org.opencontainers.image.source={{.GitURL}}"
+  - "--platform=linux/arm64"
+  goarch: arm64
+
+docker_manifests:
+- name_template: 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}'
+  image_templates:
+  - 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}-amd64'
+  - 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}-arm64'
+- name_template: 'falcosuessgott/{{.ProjectName}}:latest'
+  image_templates:
+  - 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}-amd64'
+  - 'falcosuessgott/{{.ProjectName}}:{{ .Tag }}-arm64'
