--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -1,6 +1,6 @@
 FROM alpine:3.21.2
 
 # binary is built by goreleaser and just copied to the image
-COPY mdtmpl /usr/bin/mdmtpl
+COPY mdtmpl /usr/bin/mdtmpl
 
 ENTRYPOINT ["/usr/bin/mdtmpl"]
